# BeatStudio

./: CMakeLists.txt
data/themes/beatstudio/: style.css
include/: BeatStudioRecorder.h  ConfigManager.h  MidiClip.h  MidiClipView.h  PianoRoll.h  SampleTrackView.h
plugins/FreeBoy/: CMakeLists.txt
plugins/LadspaEffect/calf/: CMakeLists.txt
plugins/LadspaEffect/calf/veal/: configure.ac
plugins/LadspaEffect/cmt/: CMakeLists.txt
plugins/LadspaEffect/swh/: CMakeLists.txt
plugins/MidiImport/: CMakeLists.txt
plugins/OpulenZ/: CMakeLists.txt
plugins/Sid/: CMakeLists.txt
plugins/Sid/resid/: CMakeLists.txt
plugins/Stk/: CMakeLists.txt
plugins/Vestige/: Vestige.cpp  Vestige.h
plugins/ZynAddSubFx/: CMakeLists.txt
src/: CMakeLists.txt
src/core/: ConfigManager.cpp  DataFile.cpp  ImportFilter.cpp  Plugin.cpp  SampleBuffer.cpp  SampleClip.cpp  SampleDecoder.cpp  SampleRecordHandle.cpp  Song.cpp  main.cpp
src/core/audio/: AudioFileDevice.cpp  AudioFileWave.cpp  AudioPortAudio.cpp  AudioSoundIo.cpp
src/core/midi/: MidiAlsaSeq.cpp
src/gui/: CMakeLists.txt  FileRevealer.cpp  GuiApplication.cpp  MainWindow.cpp  PluginBrowser.cpp
src/gui/clips/: MidiClipView.cpp  SampleClipView.cpp
src/gui/editors/: PianoRoll.cpp  SongEditor.cpp  TrackContainerView.cpp
src/gui/instrument/: InstrumentTrackWindow.cpp
src/gui/modals/: ControllerConnectionDialog.cpp  about_dialog.ui
src/gui/tracks/: BeatStudioRecorder.cpp  SampleTrackView.cpp  TrackLabelButton.cpp  TrackView.cpp
src/tracks/: MidiClip.cpp  SampleTrack.cpp
